--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+MIN_SDK_VERSION_NAME=15
+COMPILE_SDK_VERSION=28
+TARGET_SDK_VERSION=28
+VERSION_CODE=1
+VERSION_NAME="1.0"
