--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,9 @@ kotlin.code.style=official
 MIN_SDK_VERSION_NAME=15
 COMPILE_SDK_VERSION=28
 TARGET_SDK_VERSION=28
-VERSION_CODE=1
-VERSION_NAME="1.0"
+VERSION_CODE_UTIL=1
+VERSION_NAME_UTIL=1.0
+VERSION_CODE_HTTP=1
+VERSION_NAME_HTTP=1.0
+VERSION_CODE_IV=1
+VERSION_NAME_IV=1.0
