--- a/utilslib/build.gradle
+++ b/utilslib/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'maven'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion project.COMPILE_SDK_VERSION as int
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion project.MIN_SDK_VERSION_NAME as int
+        targetSdkVersion project.TARGET_SDK_VERSION as int
+        versionCode project.VERSION_CODE_UTIL as int
+        versionName project.VERSION_NAME_UTIL
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -20,6 +19,23 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: 'file:///Users/tangxin/work/maven') {
+                    authentication(userName: 'tsontang', password: 'mmm123')
+                }
+
+                pom.project {
+                    groupId 'com.tson.utils.lib.util'
+                    artifactId 'lib'
+                    version '1.0.0'
+                    packaging 'aar'
+                }
+            }
         }
     }
 
