--- a/utilslibimage/build.gradle
+++ b/utilslibimage/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'maven'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion project.COMPILE_SDK_VERSION as int
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion project.MIN_SDK_VERSION_NAME as int
+        targetSdkVersion project.TARGET_SDK_VERSION as int
+        versionCode project.VERSION_CODE_IV as int
+        versionName project.VERSION_NAME_IV
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -20,6 +19,23 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: 'file:///Users/tangxin/work/maven') {
+                    authentication(userName: 'tsontang', password: 'mmm123')
+                }
+
+                pom.project {
+                    groupId 'com.tson.utils.lib.iv'
+                    artifactId 'lib'
+                    version '1.0.0'
+                    packaging 'aar'
+                }
+            }
         }
     }
 
@@ -33,6 +49,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    api 'jp.wasabeef:glide-transformations:4.0.1'
+    api "com.github.bumptech.glide:okhttp3-integration:4.8.0"
 }
 repositories {
     mavenCentral()
