--- a/utilslibimage/src/main/AndroidManifest.xml
+++ b/utilslibimage/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tson.utils.lib.iv"/>
+          package="com.tson.utils.lib.iv">
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
