--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestRecyclerViewActivity">
-
-        </activity>
+        <activity android:name=".TestRecyclerViewActivity"></activity>
         <activity android:name=".Main2Activity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".httpdemo.DemoHttpActivity"></activity>
     </application>
 
 </manifest>
