add download utils

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,5 @@ dependencies {
     implementation 'com.tson.utils.lib.http:lib:1.0.2'
     implementation 'com.tson.utils.lib.util:lib:1.0.1'
     implementation 'com.tson.utils.lib.iv:lib:1.0.1'
-    //    implementation 'com.tson.utils.view:lib:1.0.0'
-    implementation project(':utilsview')
+    implementation 'com.tson.utils.view:lib:1.0.2'
 }
