update download lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     implementation 'com.tson.utils.lib.http:lib:1.0.2'
     implementation 'com.tson.utils.lib.util:lib:1.0.1'
     implementation 'com.tson.utils.lib.iv:lib:1.0.1'
+    implementation 'com.tson.utils.lib.download:lib:1.0.2'
     implementation 'com.tson.utils.view:lib:1.0.2'
 }
