utils util add logUtils

--- a/utilslib/src/main/AndroidManifest.xml
+++ b/utilslib/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tson.utils.lib.util">
+    package="com.tson.utils.lib.util">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -7,13 +8,18 @@
 
     <application>
         <provider
-                android:name=".provider.PrivateProvider"
-                android:authorities="${applicationId}.fileProvider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name=".provider.PrivateProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths"/>
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name=".log.view.LogRootFileActivity"></activity>
+        <activity android:name=".log.view.LogListActivity"></activity>
+        <activity android:name=".log.view.LogDetailActivity"></activity>
     </application>
+
 </manifest>
