--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.tson.utils.lib.http:lib:1.0.2'
-//    implementation 'com.tson.utils.lib.util:lib:1.0.6'
+    implementation 'com.tson.utils.lib.http:lib:1.0.3'
+    implementation 'com.tson.utils.lib.util:lib:1.0.7'
     implementation 'com.tson.utils.lib.iv:lib:1.0.1'
-    implementation 'com.tson.utils.lib.download:lib:1.0.2'
-//    implementation 'com.tson.utils.view:lib:1.0.7'
-    implementation project(':utilslib')
-    implementation project(':utilsview')
+    implementation 'com.tson.utils.lib.download:lib:1.0.3'
+    implementation 'com.tson.utils.view:lib:1.0.8'
+//    implementation project(':utilslib')
+//    implementation project(':utilsview')
 }
