--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ dependencies {
     implementation 'com.tson.utils.lib.http:lib:1.0.3'
     implementation 'com.tson.utils.lib.util:lib:1.0.7'
     implementation 'com.tson.utils.lib.iv:lib:1.0.1'
-    implementation 'com.tson.utils.lib.download:lib:1.0.3'
+//    implementation 'com.tson.utils.lib.download:lib:1.0.3'
 //    implementation 'com.tson.utils.view:lib:1.0.8'
 //    implementation project(':utilslib')
     implementation project(':utilsview')
+    implementation project(':utilsdownload')
 }
