--- a/utilsdownload/build.gradle
+++ b/utilsdownload/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.liulishuo.filedownloader:library:1.7.6'
+    api 'com.liulishuo.filedownloader:library:1.7.6'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
