--- a/utilsdownload/build.gradle
+++ b/utilsdownload/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,7 +32,7 @@ android {
                 pom.project {
                     groupId 'com.tson.utils.lib.download'
                     artifactId 'lib'
-                    version '1.0.6'
+                    version '1.0.7'
                     packaging 'aar'
                 }
             }
