--- a/utilslib/build.gradle
+++ b/utilslib/build.gradle
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -33,7 +33,7 @@ android {
                 pom.project {
                     groupId 'com.tson.utils.lib.util'
                     artifactId 'lib'
-                    version '1.0.7'
+                    version '1.0.8'
                     packaging 'aar'
                 }
             }
