--- a/utilsview/build.gradle
+++ b/utilsview/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -40,7 +40,7 @@ android {
                 pom.project {
                     groupId 'com.tson.utils.view'
                     artifactId 'lib'
-                    version '1.0.8'
+                    version '1.0.9'
                     packaging 'aar'
                 }
             }
