--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,11 @@ VERSION_NAME_IV=1.0
 
 VERSION_CODE_VIEW=1
 VERSION_NAME_VIEW=1.0
+
+VERSION_CODE_DOWNLOAD=1
+VERSION_NAME_DOWNLOAD=1.0
+
+KEY_ALIAS=test
+KEY_PASSWORD=123456
+STORE_FILE=../key/key.keystore
+STORE_PASSWORD=123456
