--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     implementation 'com.tson.utils.lib.util:lib:1.0.10'
     implementation 'com.tson.utils.lib.iv:lib:1.0.4'
     implementation 'com.tson.utils.lib.download:lib:1.0.8'
-    implementation 'com.tson.utils.view:lib:1.0.10'
+//    implementation 'com.tson.utils.view:lib:1.0.10'
 //    implementation project(':utilslib')
-//    implementation project(':utilsview')
+    implementation project(':utilsview')
 //    implementation project(':utilsdownload')
 }
