--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.tson.utils.lib.http:lib:1.0.5'
-    implementation 'com.tson.utils.lib.util:lib:1.0.10'
+//    implementation 'com.tson.utils.lib.util:lib:1.0.10'
     implementation 'com.tson.utils.lib.iv:lib:1.0.4'
     implementation 'com.tson.utils.lib.download:lib:1.0.8'
 //    implementation 'com.tson.utils.view:lib:1.0.10'
-//    implementation project(':utilslib')
+    implementation project(':utilslib')
     implementation project(':utilsview')
 //    implementation project(':utilsdownload')
 }
