add camera utils

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.tson.utils">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
             android:allowBackup="true"
             android:icon="@drawable/icon_my"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".TestRecyclerViewActivity"/>
-        <activity android:name=".Main2Activity">
+        <activity android:name=".photo.CameraActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".TestRecyclerViewActivity"/>
+        <activity android:name=".Main2Activity"/>
         <activity android:name=".DemoUtilsActivity"/>
         <activity android:name=".DownloadActivity"/>
         <activity android:name=".HttpActivity"/>
