--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,27 +10,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity
-            android:name=".touch.MoveActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
-
-        </activity>
-        <activity android:name=".Main3Activity"></activity>
-        <activity android:name=".photo.CameraActivity"></activity>
-        <activity android:name=".TestRecyclerViewActivity" >
-
+        <activity android:name=".Button4Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".touch.MoveActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+        <activity android:name=".Main3Activity" />
+        <activity android:name=".photo.CameraActivity" />
+        <activity android:name=".TestRecyclerViewActivity">
 
         </activity>
         <activity android:name=".Main2Activity" />
         <activity android:name=".DemoUtilsActivity" />
         <activity android:name=".DownloadActivity" />
         <activity android:name=".HttpActivity" />
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".MenuActivity" />
     </application>
 
 </manifest>
