--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Button4Activity">
+        <activity android:name=".diff.DiffActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Button4Activity">
+        </activity>
         <activity
             android:name=".touch.MoveActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".Main3Activity" />
         <activity android:name=".photo.CameraActivity" />
-        <activity android:name=".TestRecyclerViewActivity">
-
-        </activity>
+        <activity android:name=".TestRecyclerViewActivity"></activity>
         <activity android:name=".Main2Activity" />
         <activity android:name=".DemoUtilsActivity" />
         <activity android:name=".DownloadActivity" />
