--- a/easyBase/build.gradle
+++ b/easyBase/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion project.MIN_SDK_VERSION_NAME as int
         targetSdkVersion project.TARGET_SDK_VERSION as int
-        versionCode project.VERSION_CODE_IV as int
-        versionName project.VERSION_NAME_IV
+        versionCode project.VERSION_CODE_HTTP as int
+        versionName project.VERSION_NAME_HTTP
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -19,23 +19,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                repository(url: 'file:///Users/tangxin/work/maven') {
-                    authentication(userName: 'tsontang', password: 'mmm123')
-                }
-
-                pom.project {
-                    groupId 'com.tson.utils.lib.iv'
-                    artifactId 'lib'
-                    version '1.0.17'
-                    packaging 'aar'
-                }
-            }
         }
     }
 
@@ -49,10 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    api 'jp.wasabeef:glide-transformations:4.0.1'
-    api "com.github.bumptech.glide:okhttp3-integration:4.8.0"
+
 }
 repositories {
     mavenCentral()
