--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.tson.utils"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -69,5 +69,6 @@ dependencies {
 //    implementation 'com.tson.utils.view:lib:1.0.10'
     implementation project(':utilslib')
     implementation project(':utilsview')
+    implementation project(':easyBase')
 //    implementation project(':utilsdownload')
 }
