--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tson.utils">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -9,24 +10,27 @@
         android:icon="@drawable/icon_my"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".diff.DiffActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".diff.DiffActivity" />
         <activity android:name=".Button4Activity">
+
         </activity>
         <activity
             android:name=".touch.MoveActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".Main3Activity" />
         <activity android:name=".photo.CameraActivity" />
-        <activity android:name=".TestRecyclerViewActivity"></activity>
+        <activity android:name=".TestRecyclerViewActivity" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".DemoUtilsActivity" />
+        <activity android:name=".DemoUtilsActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".DownloadActivity" />
         <activity android:name=".HttpActivity" />
         <activity android:name=".MenuActivity" />
